fix design for mobile and add ngx-translate library

--- a/src/app/routes/main/component/components/main-header/main-header.component.html
+++ b/src/app/routes/main/component/components/main-header/main-header.component.html
@@ -1,4 +1,4 @@
 <header>
-  <fa-icon [icon]="['fas', 'bars']" (click)="toogleSidebar()"></fa-icon>
-  <h1>Uman Express system</h1>
+  <fa-icon [icon]="['fas', 'bars']" (click)="onBurgerClick()"></fa-icon>
+  <h1>{{ 'HEADER.TITLE' | translate }}</h1>
 </header>
