--- a/src/app/routes/main/component/components/main-sidebar/main-sidebar.component.scss
+++ b/src/app/routes/main/component/components/main-sidebar/main-sidebar.component.scss
@@ -1,4 +1,5 @@
 aside {
+  z-index: 1;
   height: 100%;
   background-color: #fff;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -42,7 +43,11 @@ aside {
       }
 
     }
+  }
+}
 
-
+@media (max-width: 991.98px) {
+  aside {
+    position: absolute;
   }
 }
