--- a/src/app/routes/main/shared/components/main-table/main-table.component.scss
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.scss
@@ -4,222 +4,249 @@
   background-color: white;
   border-radius: 5px;
 
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.253);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
   padding: 0px 15px;
-  margin: 0 auto;
 
   .row {
-    .block {
-      padding: 15px;
 
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    color: #7b7e80;
+    border-top: 1px solid #DDDDDD;
 
-    &.loading p {
-      text-align: center;
+    .preview {
+      display: flex;
+      justify-content: space-around;
+
+      .block {
+        padding: 8px;
+        line-height: 15px;
+
+        overflow: hidden;
+      }
     }
 
     &:nth-child(2n) .preview {
       background-color: #f1f1f1;
     }
-  }
 
-  .table-header {
-    .row {
-      display: flex;
-      justify-content: space-between;
 
-      div {
-        font-weight: bold;
-        cursor: pointer;
-
-        fa-icon {
-          font-size: 12px;
-          padding-left: 2.5px;
-          padding-right: 0;
-        }
-      }
+    fa-icon {
+      color: #7b7e80;
     }
   }
 
-  .table-body {
-    .row {
-      .preview {
+  .table-header .row .preview div {
+    font-weight: bold;
+  }
+
+  .table-body .row {
+    .preview {
+      .roles {
         display: flex;
-        justify-content: space-between;
-        border-bottom: 1px solid #adadad;
+        flex-wrap: wrap;
 
-        fa-icon {
-          color: lightgray;
-        }
+        align-items: center;
 
-        .contacts {
-          .phones {
-            margin-bottom: 5px;
-          }
-        }
-
-        .address {
-          .city {
-            margin-bottom: 5px;
-          }
-        }
-
-        .roles {
-          display: flex;
-          align-items: center;
-
-          span {
-            display: block;
-            padding: 5px 10px;
-            background-color: lightgray;
-            border-radius: 7px;
-            margin-right: 5px;
-
-            &:last-child {
-              margin-right: 0px;
-            }
-          }
-        }
-      }
-
-      .more {
-        border-bottom: 1px solid #adadad;
-        padding: 15px;
-
-        p {
-          font-weight: bold;
-          padding: 5px 0px;
-
-          span {
-            font-weight: 100;
-          }
+        div {
+          font-size: 10px;
+          padding: 3px 8px;
+          border-radius: 5px;
+          background-color: #1c84c6;
+          color: white;
+          margin-right: 5px;
+          margin-bottom: 5px;
 
           &:last-child {
-            margin-bottom: 0px;
-          }
-
-          fa-icon {
-            font-weight: normal;
-            font-size: 14px;
-            margin: 0px 5px;
-          }
-
-          &.roles {
-            display: flex;
-            align-items: center;
-
-            span {
-              display: block;
-              padding: 5px 10px;
-              background-color: lightgray;
-              border-radius: 7px;
-              margin-left: 5px;
-            }
+            margin-right: 0;
           }
         }
-      }
-
-      &:last-child {
-        border-bottom: none;
-      }
-
-      &.active {
-        .preview {
-          background-color: #e9e9e9;
-        }
-      }
-
-      &:hover .preview {
-        background-color: #e9e9e9;
-        cursor: pointer;
       }
     }
+
+    .more {
+      padding: 15px;
+      border-top: 1px solid #DDDDDD;
+
+      line-height: 15px;
+
+      >div {
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 10px;
+
+        >p {
+          font-weight: bold;
+        }
+
+        >div {
+          flex: 1;
+          overflow: hidden;
+
+          >p {
+            display: flex;
+
+            fa-icon {
+              margin-right: 5px;
+            }
+
+            &.phone span {
+
+              &:nth-child(n + 3) {
+                display: inline-flex;
+                align-items: center;
+
+                &:before {
+                  content: '';
+                  display: inline-block;
+                  width: 5px;
+                  height: 5px;
+                  border-radius: 50%;
+                  background-color: #7b7e80;
+                  margin: 0px 5px;
+                }
+              }
+            }
+
+            &.id span {
+              display: inline-block;
+              background-color: #fdd;
+              padding: 3px;
+              border-radius: 5px;
+              color: #d55;
+              font-weight: bold;
+            }
+
+            &:nth-child(n + 2) {
+              margin-top: 2.5px;
+            }
+
+          }
+        }
+      }
+    }
+
   }
 }
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 767.98px) {
-  .block {
-    &.arrow {
-      width: 1%;
-    }
+  .row {
+    font-size: 13px;
 
-    &.name {
-      width: 29%;
-    }
+    .block {
+      &.arrow {
+        flex: none;
+        width: 20px;
+      }
 
-    &.address {
-      display: none;
-    }
+      &.name {
+        flex: 1;
+      }
 
-    &.roles {
-      width: 70%;
+      &.address {
+        display: none;
+      }
+
+      &.roles {
+        flex: 2;
+      }
     }
+  }
+
+  .table-body .row .more>div>p {
+    width: 65px;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) and (max-width: 991.98px) {
-  .block {
-    &.arrow {
-      width: 1%;
-    }
+  .row {
+    font-size: 13px;
 
-    &.name {
-      width: 29%;
-    }
+    .block {
+      &.arrow {
+        flex: none;
+        width: 20px;
+      }
 
-    &.address {
-      display: none;
-    }
+      &.name {
+        flex: 1;
+      }
 
-    &.roles {
-      width: 70%;
+      &.address {
+        flex: 1;
+      }
+
+      &.roles {
+        flex: 2;
+      }
     }
+  }
+
+  .table-body .row .more>div>p {
+    width: 90px;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) and (max-width: 1199.98px) {
-  .block {
-    &.arrow {
-      width: 1%;
-    }
+  .row {
+    font-size: 13px;
 
-    &.name {
-      width: 19%;
-    }
+    .block {
+      &.arrow {
+        flex: none;
+        width: 20px;
+      }
 
-    &.address {
-      width: 40%;
-    }
+      &.name {
+        flex: 1;
+      }
 
-    &.roles {
-      width: 40%;
+      &.address {
+        flex: 1;
+      }
+
+      &.roles {
+        flex: 2;
+      }
     }
+  }
+
+  .table-body .row .more>div>p {
+    width: 90px;
+
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .block {
-    &.arrow {
-      width: 1%;
-    }
+  .row {
+    font-size: 13px;
 
-    &.name {
-      width: 19%;
-    }
+    .block {
+      &.arrow {
+        flex: none;
+        width: 20px;
+      }
 
-    &.address {
-      width: 40%;
-    }
+      &.name {
+        flex: 1;
+      }
 
-    &.roles {
-      width: 40%;
+      &.address {
+        flex: 1;
+      }
+
+      &.roles {
+        flex: 2;
+      }
     }
+  }
+
+  .table-body .row .more>div>p {
+    width: 90px;
   }
 }
