--- a/src/app/routes/main/shared/components/main-table/main-table.component.html
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.html
@@ -59,7 +59,7 @@
         <div>
           <p>Added by:</p>
           <div>
-            <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'short'}}</p>
+            <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'M/d/yy, HH:mm:ss '}}</p>
           </div>
         </div>
       </div>
