fix date format

--- a/src/app/routes/main/shared/components/main-table/main-table.component.html
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.html
@@ -59,7 +59,7 @@
         <div>
           <p>Added by:</p>
           <div>
-            <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'dd/mm/yyyy HH:mm '}}</p>
+            <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'dd/MM/yyyy, HH:mm '}}</p>
           </div>
         </div>
       </div>
