--- a/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.html
+++ b/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.html
@@ -3,10 +3,15 @@
       <fa-icon [icon]="['fas', 'filter']"></fa-icon>
       {{ "FILTER.TITLE" | translate }}
     </label>
-    <div class="input-wrapper">
-      <button (click)="onClickHandler()">
-        <fa-icon [icon]="['fas', 'search']"></fa-icon>
+    <div class="filter-wrapper">
+      <div class="input-wrapper">
+        <input #filterInput type="text" formControlName="filter" placeholder="Name, email or phone number" />
+        <div class="icon-wrapper">
+          <fa-icon [icon]="['fas', showIcon()]" [spin]="isSpinner" (click)="clearInput()"></fa-icon>
+        </div>
+      </div>
+      <button>
+        <fa-icon [icon]="['fas', 'chevron-down']"></fa-icon>
       </button>
-      <input type="text" formControlName="filter" placeholder="фильтр" />
     </div>
   </form>
