--- a/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
+++ b/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
@@ -1,78 +1,59 @@
   form {
     width: 100%;
 
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0),
       0 3px 1px -2px rgba(0, 0, 0, 0.2),
       0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-    background-color: #fff;
-    padding: 15px 15px 30px;
+    background-color: #F3F3F4;
+    padding: 10px 8px;
+    display: flex;
 
-    label {
-      display: flex;
-      align-items: center;
-      font-size: 16px;
+    .input-wrapper {
+      position: relative;
+      flex: 1;
 
-      margin-bottom: 20px;
+      input {
+        color: #373A3C;
+        width: 100%;
+        font-size: 14px;
+        padding: 7px 0px 7px 12px;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        border: 1px solid #DDDDDD;
+      }
 
-      color: #676a6c;
+      .icon-wrapper {
+        position: absolute;
+        top: 0;
+        right: 10px;
 
-      fa-icon {
-        font-size: 12px;
-        margin-right: 5px;
-        color: #1c84c6;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+
+        fa-icon {
+          color: #DDDDDD;
+          cursor: pointer;
+        }
       }
     }
 
-    .filter-wrapper {
-      display: flex;
+    button {
+      background-color: #E6E6E6;
+      padding: 0px 8px;
 
-      .input-wrapper {
-        position: relative;
-        flex: 1;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      margin-right: 5px;
+      border: 1px solid #DDDDDD;
 
-        input {
-          width: 100%;
-          font-size: 14px;
-          padding: 7.5px;
-          border-top-left-radius: 5px;
-          border-bottom-left-radius: 5px;
-          border: 1px solid #e5e6e7;
 
-          &:focus {
-            border-color: #1c84c6;
-          }
-        }
-
-        .icon-wrapper {
-          position: absolute;
-          top: 0;
-          right: 10px;
-
-          height: 100%;
-
-          display: flex;
-          align-items: center;
-
-          fa-icon {
-            color: #e5e6e7;
-            cursor: pointer;
-          }
-        }
-      }
-
-      button {
-        background-color: #1c84c6;
-        padding: 0px 20px;
-
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-        margin-right: 5px;
-
-        fa-icon {
-          font-size: 14px;
-          color: #fff;
-        }
+      fa-icon {
+        font-size: 14px;
+        color: #777777;
+        vertical-align: middle;
       }
     }
   }
