--- a/src/app/routes/main/shared/components/main-table/main-table.component.scss
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.scss
@@ -8,19 +8,18 @@
     0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-  padding: 0px 15px;
+  padding: 0px 8px;
 
   .row {
 
     color: #7b7e80;
-    border-top: 1px solid #DDDDDD;
 
     .preview {
       display: flex;
       justify-content: space-around;
 
       .block {
-        padding: 8px;
+        padding: 12px 7px 9.5px;
         line-height: 15px;
 
         overflow: hidden;
@@ -28,7 +27,7 @@
     }
 
     &:nth-child(2n) .preview {
-      background-color: #f1f1f1;
+      background-color: #F7F7F7;
     }
 
 
@@ -39,9 +38,17 @@
 
   .table-header .row .preview div {
     font-weight: bold;
+    color: #55595C
   }
 
   .table-body .row {
+    border-top: 1px solid #F7F7F7;
+
+    .name {
+      color: #1C7CD5;
+      margin-bottom: 2.5px;
+    }
+
     .preview {
       .roles {
         display: flex;
@@ -53,10 +60,12 @@
           font-size: 10px;
           padding: 3px 8px;
           border-radius: 5px;
-          background-color: #1c84c6;
+          background-color: #818A91;
           color: white;
           margin-right: 5px;
-          margin-bottom: 5px;
+          margin-bottom: 2.5px;
+
+          font-weight: bold;
 
           &:last-child {
             margin-right: 0;
