--- a/src/app/routes/main/shared/components/main-table/main-table.component.scss
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.scss
@@ -76,7 +76,7 @@
 
     .more {
       padding: 15px;
-      border-top: 1px solid #DDDDDD;
+      border-top: 1px solid #F7F7F7;
 
       line-height: 15px;
 
