borders for form

--- a/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
+++ b/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
@@ -9,6 +9,8 @@
     padding: 10px 8px;
     display: flex;
 
+    border-radius: 5px;
+
     .input-wrapper {
       position: relative;
       flex: 1;
