style button in header

--- a/src/app/routes/main/component/components/main-header/main-header.component.html
+++ b/src/app/routes/main/component/components/main-header/main-header.component.html
@@ -1,4 +1,6 @@
 <header>
-  <fa-icon [icon]="['fas', 'bars']" (click)="onBurgerClick()"></fa-icon>
+  <div class="icon-wrapper" (click)="onBurgerClick()">
+    <fa-icon [icon]="['fas', 'bars']"></fa-icon>
+  </div>
   <h1>{{ 'HEADER.TITLE' | translate }}</h1>
 </header>
