--- a/src/app/routes/main/component/components/main-header/main-header.component.scss
+++ b/src/app/routes/main/component/components/main-header/main-header.component.scss
@@ -1,11 +1,17 @@
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
-  padding: 20px;
+  padding: 5px;
 
   background-color: #D32F2F;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
   color: white;
+
+  .icon-wrapper {
+    padding: 15px;
+    background-color: #BC2424;
+  }
 }
