--- a/src/app/routes/main/component/main.component.html
+++ b/src/app/routes/main/component/main.component.html
@@ -2,8 +2,7 @@
   <app-main-header (burgerClicked)="toogleSidebar()"></app-main-header>
   <div class="content-wrapper">
     <app-main-sidebar [show]="showSidebar"></app-main-sidebar>
-    <div class="routes-wrapper" infiniteScroll [infiniteScrollThrottle]="500" (scrolled)="getContacts()"
-      [scrollWindow]="false">
+    <div class="routes-wrapper">
       <router-outlet></router-outlet>
     </div>
   </div>
