--- a/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
+++ b/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
@@ -48,8 +48,8 @@
 
       border-top-right-radius: 5px;
       border-bottom-right-radius: 5px;
-      margin-right: 5px;
       border: 1px solid #DDDDDD;
+      border-left: none;
 
 
       fa-icon {
