--- a/src/app/routes/main/routes/main-contacts/component/main-contacts.component.html
+++ b/src/app/routes/main/routes/main-contacts/component/main-contacts.component.html
@@ -1,4 +1,9 @@
-<div class="main-contacts">
+<div class="main-contacts" infiniteScroll [infiniteScrollThrottle]="500" (scrolled)="getContacts()"
+  [scrollWindow]="false">
   <app-main-contacts-filter></app-main-contacts-filter>
   <app-main-table></app-main-table>
+  <div class="icon-wrapper" *ngIf="isLoading">
+    <fa-icon [icon]="['fas', 'spinner']" [spin]="true"></fa-icon>
+  </div>
+
 </div>
