--- a/src/app/routes/main/shared/components/main-table/main-table.component.html
+++ b/src/app/routes/main/shared/components/main-table/main-table.component.html
@@ -64,5 +64,13 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="preview">
+        <div class="block length">
+          Showing {{(contacts$ | async)?.length }} entries
+        </div>
+      </div>
+    </div>
   </div>
+  <fa-icon *ngIf="isLoading" [icon]="['fas', 'spinner']" [spin]="true"></fa-icon>
 </div>
