fix shadows and borders

--- a/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
+++ b/src/app/routes/main/routes/main-contacts/component/components/main-contacts-filter/main-contacts-filter.component.scss
@@ -45,6 +45,8 @@
       background-color: #E6E6E6;
       padding: 0px 8px;
 
+      border: 1px solid #DDDDDD;
+
       border-radius: 0px 5px 5px 0px;
       border-left: none;
 
