reset ios default styles for input

--- a/src/assets/scss/styles/reset/input.scss
+++ b/src/assets/scss/styles/reset/input.scss
@@ -1,4 +1,11 @@
 input {
   border: none;
   outline: none;
+
+  &[type=text] {
+    /* Remove First */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
 }
