--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,5 +2,5 @@
   <div class="icon-wrapper" (click)="onBurgerClick()">
     <fa-icon [icon]="['fas', 'bars']"></fa-icon>
   </div>
-  <h1>{{ 'HEADER.TITLE' | translate }}</h1>
+  <h1>{{ 'header.title' | translate }}</h1>
 </header>
