--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li>
       <p>Inspector</p>
-      <span>админ</span>
+      <span>admin</span>
     </li>
     <li *ngFor="let item of items">
       <a [routerLink]="item.route" routerLinkActive="active">
