--- a/src/app/components/contacts/contacts-table/contacts-table.component.html
+++ b/src/app/components/contacts/contacts-table/contacts-table.component.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="preview">
         <div class="block arrow"></div>
-        <div class="block name">Name</div>
-        <div class="block address">Address</div>
-        <div class="block roles">Roles</div>
+        <div class="block name">{{'contacts.table.name' | translate }}</div>
+        <div class="block address">{{'contacts.table.address' | translate }}</div>
+        <div class="block roles">{{'contacts.table.roles' | translate }}</div>
       </div>
     </div>
   </div>
@@ -31,33 +31,33 @@
       </div>
       <div class="more" *ngIf="activeRow === row">
         <div>
-          <p>Contact Info:</p>
+          <p>{{'contacts.table.info' | translate }}:</p>
           <div>
-            <p class="phone">
+            <p class="phone" *ngIf="contact.phones.length">
               <fa-icon [icon]="['fas', 'phone']"></fa-icon>
               <span *ngFor="let phone of contact.phones">{{ phone.prefix }}{{ phone.phone }}</span>
             </p>
-            <p>
+            <p *ngIf="contact.email">
               <fa-icon [icon]="['far', 'envelope']"></fa-icon>
               <span>{{ contact.email }}</span>
             </p>
           </div>
         </div>
         <div class="address">
-          <p>Address:</p>
+          <p>{{'contacts.table.address' | translate }}:</p>
           <div>
             <p class="city">{{ contact.address.cityName | titlecase }}</p>
             <p class="street">{{ contact.address.street | titlecase }}</p>
           </div>
         </div>
         <div>
-          <p>ID:</p>
+          <p>{{'contacts.table.id' | translate }}:</p>
           <div>
             <p class="id"><span>{{ contact.uniqueCode }}</span></p>
           </div>
         </div>
         <div>
-          <p>Added by:</p>
+          <p>{{'contacts.table.added' | translate }}:</p>
           <div>
             <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'dd/MM/yyyy HH:mm '}}</p>
           </div>
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="preview">
         <div class="block length">
-          Showing {{(contacts$ | async)?.length }} entries
+          {{'contacts.table.entires' | translate}} {{(contacts$ | async)?.length }}
         </div>
       </div>
     </div>
