--- a/src/app/components/contacts/contacts-table/contacts-table.component.html
+++ b/src/app/components/contacts/contacts-table/contacts-table.component.html
@@ -73,3 +73,6 @@
     </div>
   </div>
 </div>
+<div class="icon-wrapper" *ngIf="loading">
+  <fa-icon [icon]="['fas', 'spinner']" [spin]="true"></fa-icon>
+</div>
