--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,7 +1,4 @@
 <div class="contacts" infiniteScroll [infiniteScrollThrottle]="500" (scrolled)="getContacts()" [scrollWindow]="false">
   <app-contacts-filter></app-contacts-filter>
-  <app-contacts-table></app-contacts-table>
-  <div class="icon-wrapper" *ngIf="isLoading">
-    <fa-icon [icon]="['fas', 'spinner']" [spin]="true"></fa-icon>
-  </div>
+  <app-contacts-table [loading]="isLoading"></app-contacts-table>
 </div>
