--- a/src/app/components/contacts/contacts-table/contacts-table.component.html
+++ b/src/app/components/contacts/contacts-table/contacts-table.component.html
@@ -3,18 +3,18 @@
     <div class="row">
       <div class="preview">
         <div class="block arrow"></div>
-        <div class="block name">{{'contacts.table.name' | translate }}</div>
-        <div class="block address">{{'contacts.table.address' | translate }}</div>
-        <div class="block roles">{{'contacts.table.roles' | translate }}</div>
+        <div class="block name">{{ 'contacts.table.name' | translate }}</div>
+        <div class="block address">
+          {{ 'contacts.table.address' | translate }}
+        </div>
+        <div class="block roles">{{ 'contacts.table.roles' | translate }}</div>
       </div>
     </div>
   </div>
 
   <div class="table-body">
-    <div *ngFor="
-        let contact of contacts$ | async;
-        let row = index;
-      " [ngClass]="{ row: true, active: activeRow === row }">
+    <div *ngFor="let contact of contacts$ | async; let row = index"
+      [ngClass]="{ row: true, active: activeRow === row }">
       <div class="preview" (click)="onClick(row)">
         <fa-icon class="block arrow" [icon]="['fas', 'chevron-down']" [rotate]="activeRow === row ? 0 : 270">
         </fa-icon>
@@ -24,14 +24,14 @@
           <p class="street">{{ contact.address.street | titlecase }}</p>
         </div>
         <div class="block roles">
-          <div *ngFor="let role of contact.roles | keyvalue">{{
-            role.key | titlecase
-          }}</div>
+          <div *ngFor="let role of contact.roles | keyvalue">
+            {{ role.key | titlecase }}
+          </div>
         </div>
       </div>
       <div class="more" *ngIf="activeRow === row">
         <div>
-          <p>{{'contacts.table.info' | translate }}:</p>
+          <p>{{ 'contacts.table.info' | translate }}:</p>
           <div>
             <p class="phone" *ngIf="contact.phones.length">
               <fa-icon [icon]="['fas', 'phone']"></fa-icon>
@@ -44,22 +44,27 @@
           </div>
         </div>
         <div class="address">
-          <p>{{'contacts.table.address' | translate }}:</p>
+          <p>{{ 'contacts.table.address' | translate }}:</p>
           <div>
             <p class="city">{{ contact.address.cityName | titlecase }}</p>
             <p class="street">{{ contact.address.street | titlecase }}</p>
           </div>
         </div>
         <div>
-          <p>{{'contacts.table.id' | translate }}:</p>
+          <p>{{ 'contacts.table.id' | translate }}:</p>
           <div>
-            <p class="id"><span>{{ contact.uniqueCode }}</span></p>
+            <p class="id">
+              <span>{{ contact.uniqueCode }}</span>
+            </p>
           </div>
         </div>
         <div>
-          <p>{{'contacts.table.added' | translate }}:</p>
+          <p>{{ 'contacts.table.added' | translate }}:</p>
           <div>
-            <p>{{ contact.insertBy.name }} | {{ contact.timestamp.date | date:'dd/MM/yyyy HH:mm '}}</p>
+            <p>
+              {{ contact.insertBy.name }} |
+              {{ contact.timestamp.date | date: 'dd/MM/yyyy HH:mm ' }}
+            </p>
           </div>
         </div>
       </div>
@@ -67,7 +72,8 @@
     <div class="row">
       <div class="preview">
         <div class="block length">
-          {{'contacts.table.entires' | translate}} {{(contacts$ | async)?.length }}
+          {{ 'contacts.table.entires' | translate }}
+          {{ (contacts$ | async)?.length }}
         </div>
       </div>
     </div>
