--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -2,6 +2,33 @@
   height: 100%;
   overflow: auto;
 
+  .icon-wrapper {
+    position: absolute;
+    right: 25px;
+    bottom: 25px;
+
+    height: 57px;
+    width: 57px;
+
+    background-color: #6E7A7F;
+
+    border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
+
+    &:hover {
+      background-color: #37474F;
+    }
+
+    fa-icon {
+      color: white;
+    }
+  }
+
   app-contacts-filter {
     display: block;
     margin-bottom: 15px;
